--- a/backend/package.json
+++ b/backend/package.json
@@ -1,26 +1,22 @@
 {
   "name": "backend",
   "version": "1.0.0",
-  "main": "index.js",
- "scripts": {
-  "dev": "nodemon",
+  "scripts": {
   "build": "tsc",
-  "start": "node dist/index.js"
+  "start": "node dist/index.js",
+  "dev": "nodemon src/index.ts"
 },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "description": "",
+
+  "main": "index.js",
+  "license": "MIT",
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
-    "express": "^4.21.2",
-    "mongoose": "^8.10.0"
+    "express": "^4.21.2"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
-    "@types/mongoose": "^5.11.96",
     "@types/node": "^22.13.1",
     "nodemon": "^3.1.9",
     "ts-node": "^10.9.2",
